--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,8 @@
 name: Deployment
 
 on:
-  push:
-    branches:
-      - main
-      - master
-  pull_request:
+  pull_request_target:
+    types: [closed]
     branches:
       - main
       - master
