--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,6 @@
 version: 2.1
+
 jobs:
-  build:
-    docker:
-      - image: cimg/node:18.16
-    working_directory: ~/repo
-    steps:
-      - checkout
-      - run:
-          name: Install Dependencies
-          command: npm install
-      - run:
-          name: Build App
-          command: npm run build
   analyze:
     docker:
       - image: sonarsource/sonar-scanner-cli:latest
@@ -24,14 +13,27 @@ jobs:
       - run:
           name: Run SonarQube Analysis
           command: sonar-scanner -Dsonar.host.url=${SONAR_HOST_URL} -Dsonar.login=${SONAR_TOKEN} -Dsonar.projectVersion=${CIRCLE_SHA1}
+  build:
+    docker:
+      - image: cimg/node:18.16
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - run:
+          name: Install Dependencies
+          command: npm install
+      - run:
+          name: Build App
+          command: npm run build
+          
 workflows:
   version: 2
   build-and-analyze:
     jobs:
-      - build
-      - analyze:
+      - analyze
+      - build:
           requires:
-            - build
+            - analyze
           filters:
             branches:
               only:
