--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,9 @@ jobs:
           name: Install Dependencies
           command: npm install
       - run:
+          name: Run code style check
+          command: npm run style:all
+      - run:
           name: Build App
           command: npm run build
           
